--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,10 @@ h4 {
     margin-left: 40px;
 }
 
+#matricula {
+    color: #FF0000; /* Vermelho puro */
+}
+
 .nav-links a:hover {
     color: black;
     
